force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Additional_Recipient_1_User__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Additional_Recipient_1_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Recipient 1 (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>