force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Additional_Recipient_2_User__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Additional_Recipient_2_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Recipient 2 (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>