force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Type</label>
    <referenceTo>echosign_dev1__Agreement_Type__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>