force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Attachment_Service_Invocation_Count__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Service_Invocation_Count__c</fullName>
    <label>Attachment Service Invocation Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>