force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Authoring__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Authoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Preview the document or drag and drop form fields or signature fields on to the document before it is sent for signature.</description>
    <inlineHelpText>Preview the document or drag and drop form fields or signature fields on to the document before it is sent for signature.</inlineHelpText>
    <label>Preview or Position Signature Fields</label>
    <type>Checkbox</type>
</CustomField>