force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__AutoUpdate__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__AutoUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Update</label>
    <type>Checkbox</type>
</CustomField>