force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Cancel_Delete_Notify_Signer__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Cancel_Delete_Notify_Signer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Signer</label>
    <type>Checkbox</type>
</CustomField>