force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Contract__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>R00N70000001hM2JEAU</relationshipName>
    <type>Lookup</type>
</CustomField>