force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Data_Mapping_Error__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Data_Mapping_Error__c</fullName>
    <label>Data Mapping Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>