force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Data_Mapping_Result__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Data_Mapping_Result__c</fullName>
    <label>Data Mapping Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>