force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__DateSent__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__DateSent__c</fullName>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>