force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__DateSigned__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__DateSigned__c</fullName>
    <label>Date Signed</label>
    <type>DateTime</type>
</CustomField>