force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__DateViewedDate__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__DateViewedDate__c</fullName>
    <formula>DATEVALUE( echosign_dev1__DateViewed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Viewed (Date)</label>
    <type>Date</type>
</CustomField>