force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__DaysUntilSigned__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__DaysUntilSigned__c</fullName>
    <formula>echosign_dev1__DateSigned__c - echosign_dev1__DateSent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Signed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>