force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Document_Builder_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Document_Builder_Document_Id__c</fullName>
    <description>ID of Document Builder Document record</description>
    <inlineHelpText>ID of Document Builder Document record</inlineHelpText>
    <label>Document Builder Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>