force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Document_Key__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Document_Key__c</fullName>
    <label>Document Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>