force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Enable_Hosted_Signing__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Hosted_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Host signing to get in-person signatures from your computer or device.</description>
    <inlineHelpText>Host signing to get in-person signatures from your computer or device.</inlineHelpText>
    <label>Host signing for the first signer</label>
    <type>Checkbox</type>
</CustomField>