force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__External_Password__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__External_Password__c</fullName>
    <label>Deprecated</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>