force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Failed_Notifications__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Failed_Notifications__c</fullName>
    <label>Failed Notifications</label>
    <summaryFilterItems>
        <field>echosign_dev1__Agreement_Notification__c.echosign_dev1__Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>echosign_dev1__Agreement_Notification__c.echosign_dev1__Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>