force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Merge_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Merge_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Mapping</label>
    <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>