force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Minutes_Until_Signed__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Minutes_Until_Signed__c</fullName>
    <formula>echosign_dev1__DaysUntilSigned__c * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Until Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>