force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__More_Recipients__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__More_Recipients__c</fullName>
    <label>Additional Recipients (Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>