force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Name__c</fullName>
    <description>Agreement name can have up to 255 characters.</description>
    <inlineHelpText>Agreement name can have up to 255 characters.</inlineHelpText>
    <label>Agreement Name(Long Version))</label>
    <length>255</length>
    <type>Text</type>
</CustomField>