force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__On_Load_Action__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__On_Load_Action__c</fullName>
    <label>On Load Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Remind</fullName>
            </value>
            <value>
                <fullName>Send</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>