force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>R00N70000001hM2REAU</relationshipName>
    <type>Lookup</type>
</CustomField>