force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Percent_Signed__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Percent_Signed__c</fullName>
    <formula>IF(ISPICKVAL( echosign_dev1__Status__c , &quot;Signed&quot;),100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>