force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Post_Sign_Redirect_Delay__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Post_Sign_Redirect_Delay__c</fullName>
    <label>Post Sign Redirect Delay (seconds)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>