force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__PreferFax__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__PreferFax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checking this box, Adobe Acrobat Sign  will send the document to the Contact&apos;s Fax number. If the Contact&apos;s Fax Number is empty, Adobe Acrobat Sign will send the document to the Contact&apos;s Email address.</inlineHelpText>
    <label>Send written signatures to fax number</label>
    <type>Checkbox</type>
</CustomField>