force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Rebuild_Recipient_List__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Rebuild_Recipient_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this field to force the basic Adobe Acrobat Sign agreement and advanced Adobe Acrobat Sign agreement pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</description>
    <inlineHelpText>Set this field to force the basic Adobe Acrobat Sign agreement and advanced Adobe Acrobat Sign agreement pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</inlineHelpText>
    <label>Rebuild Recipient List</label>
    <type>Checkbox</type>
</CustomField>