force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Recipient3__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Recipient 2 (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Agreements (2)</relationshipLabel>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>