force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Recipient_Addresses__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Addresses__c</fullName>
    <label>Recipient Addresses</label>
    <type>TextArea</type>
</CustomField>