force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Recipient_Lead2__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Lead2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Recipient 1 (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>