force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Recipient_Lead4__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Lead4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Recipient 3 (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Agreements (3)</relationshipLabel>
    <relationshipName>Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>