force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>