force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Sender_Signs_Only__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sender_Signs_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sender Signs Only</label>
    <type>Checkbox</type>
</CustomField>