force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Sender_User__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sender_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send On Behalf Of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements_Senders</relationshipName>
    <type>Lookup</type>
</CustomField>