force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__SenderSigns__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__SenderSigns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this option if you also need to sign this agreement. Then select if you sign first or if your recipients sign first.</description>
    <inlineHelpText>Check this option if you also need to sign this agreement. Then select if you sign first or if your recipients sign first.</inlineHelpText>
    <label>I also need to sign this document</label>
    <type>Checkbox</type>
</CustomField>