force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Sign_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sign_Workflow_Id__c</fullName>
    <description>Sign Workflow Id</description>
    <inlineHelpText>Sign Workflow Id</inlineHelpText>
    <label>Sign Workflow Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>