force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__SignatureOrder__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__SignatureOrder__c</fullName>
    <label>Signature Order</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>echosign_dev1__SenderSigns__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Recipient signs, then I sign</fullName>
                <default>true</default>
                <label>Recipient signs, then I sign</label>
            </value>
            <value>
                <fullName>I sign, then the Recipient signs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>