force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__SignatureType__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__SignatureType__c</fullName>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Written Signature</fullName>
            </value>
            <value>
                <fullName>e-Signature</fullName>
                <default>true</default>
                <label>e-Signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>